Fixed issue with carousel snap behavior on mobile.

--- a/frontend/src/components/project-carousel-page/ProjectCarouselView.module.scss
+++ b/frontend/src/components/project-carousel-page/ProjectCarouselView.module.scss
@@ -3,6 +3,7 @@
 
 .projectCarouselView {
   position: relative;
+  z-index: 2;
   height: 470px;
   width: 992px;
   box-sizing: border-box;
